<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.android.minisciencequiz.Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_marginBottom"
        android:layout_marginEnd="@dimen/layout_marginRight"
        android:layout_marginLeft="@dimen/layout_marginLeft"
        android:layout_marginRight="@dimen/layout_marginRight"
        android:layout_marginStart="@dimen/layout_marginLeft"
        android:background="@color/white"
        android:orientation="vertical">

        <!-- quiz 1 -->

        <ImageView
            android:id="@+id/space_comet"
            style="@style/ImageViewStyle"
            android:contentDescription="@string/desc1"
            android:src="@drawable/quiz1" />

        <TextView
            android:id="@id/text"
            style="@style/TextViewStyle1"
            android:text="@string/quiz1" />

        <RadioGroup
            android:id="@+id/radioGroup"
            style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/radioButton1"
                style="@style/RadioButtonStyle"
                android:text="@string/quiz1_1" />

            <RadioButton
                android:id="@+id/radioButton2"
                style="@style/RadioButtonStyle"
                android:text="@string/quiz1_2" />

            <RadioButton
                android:id="@+id/radioButton3"
                style="@style/RadioButtonStyle"
                android:text="@string/quiz1_3" />

            <RadioButton
                android:id="@+id/radioButton4"
                style="@style/RadioButtonStyle"
                android:text="@string/quiz1_4" />
        </RadioGroup>

        <TextView
            android:id="@+id/answer"
            style="@style/TextViewAnswerStyle" />

        <RelativeLayout style="@style/RelativeLayoutStyle">

            <TextView
                android:id="@+id/scoreTextView"
                style="@style/TextViewScoreStyle" />

            <TextView
                android:id="@+id/scoreCount"
                style="@style/TextViewScoreCountStyle"
                android:layout_toEndOf="@+id/scoreTextView"
                android:layout_toRightOf="@+id/scoreTextView" />

            <TextView
                android:id="@+id/questionTextView"
                style="@style/TextViewQuestionStyle"
                android:layout_toLeftOf="@+id/questionNumber"
                android:layout_toStartOf="@+id/questionNumber" />

            <TextView
                android:id="@+id/questionNumber"
                style="@style/TextViewQuestionNumberStyle"
                android:text="@string/quiz1_count" />

        </RelativeLayout>

        <!-- View include file -->
        <include layout="@layout/include_view" />

        <!-- quiz 2 -->

        <ImageView
            android:id="@+id/space2"
            style="@style/ImageViewStyle"
            android:contentDescription="@string/desc2"
            android:src="@drawable/quiz2" />

        <TextView
            android:id="@id/text"
            style="@style/TextViewStyle1"
            android:text="@string/quiz2" />

        <RadioGroup
            android:id="@+id/radioGroupb"
            style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/radioButton1b"
                style="@style/RadioButtonStyle"
                android:text="@string/quiz2_1" />

            <RadioButton
                android:id="@+id/radioButton2b"
                style="@style/RadioButtonStyle"
                android:text="@string/quiz2_2" />

            <RadioButton
                android:id="@+id/radioButton3b"
                style="@style/RadioButtonStyle"
                android:text="@string/quiz2_3" />
        </RadioGroup>

        <TextView
            android:id="@+id/answer2"
            style="@style/TextViewAnswerStyle" />

        <RelativeLayout style="@style/RelativeLayoutStyle2">

            <TextView
                android:id="@+id/scoreTextView2"
                style="@style/TextViewScoreStyle" />

            <TextView
                android:id="@+id/scoreCount2"
                style="@style/TextViewScoreCountStyle"
                android:layout_toEndOf="@+id/scoreTextView2"
                android:layout_toRightOf="@+id/scoreTextView2" />

            <TextView
                android:id="@+id/questionTextView2"
                style="@style/TextViewQuestionStyle"
                android:layout_toLeftOf="@+id/questionNumber2"
                android:layout_toStartOf="@+id/questionNumber2" />

            <TextView
                android:id="@+id/questionNumber2"
                style="@style/TextViewQuestionNumberStyle"
                android:text="@string/quiz2_count" />

        </RelativeLayout>

        <!-- View include file -->
        <include layout="@layout/include_view" />

        <!-- quiz3 -->

        <ImageView
            android:id="@+id/space3"
            style="@style/ImageViewStyle"
            android:contentDescription="@string/desc3"
            android:src="@drawable/quiz3" />

        <TextView
            android:id="@id/text"
            style="@style/TextViewStyle1"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/paddingBottom_textviewLg"
            android:text="@string/quiz3" />

        <EditText
            android:id="@+id/editTextBox"
            android:layout_width="@dimen/layout_widthSmall"
            android:layout_height="@dimen/layout_heightSmall"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/quiz3_2"
            android:inputType="text"
            android:maxLength="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/submitButton"
            style="@style/ButtonStyle"
            android:layout_marginTop="@dimen/button_layout_marginTopLg"
            android:text="@string/quiz3_1" />

        <TextView
            android:id="@+id/answer3"
            style="@style/TextViewAnswerStyle" />

        <RelativeLayout style="@style/RelativeLayoutStyle2">

            <TextView
                android:id="@+id/scoreTextView3"
                style="@style/TextViewScoreStyle" />

            <TextView
                android:id="@+id/scoreCount3"
                style="@style/TextViewScoreCountStyle"
                android:layout_toEndOf="@+id/scoreTextView3"
                android:layout_toRightOf="@+id/scoreTextView3" />

            <TextView
                android:id="@+id/questionTextView3"
                style="@style/TextViewQuestionStyle"
                android:layout_toLeftOf="@+id/questionNumber3"
                android:layout_toStartOf="@+id/questionNumber3" />

            <TextView
                android:id="@+id/questionNumber3"
                style="@style/TextViewQuestionNumberStyle"
                android:text="@string/quiz3_count" />

        </RelativeLayout>

        <!-- View include file -->
        <include layout="@layout/include_view" />

        <!-- quiz 4 -->

        <ImageView
            android:id="@+id/space4"
            style="@style/ImageViewStyle"
            android:contentDescription="@string/desc4"
            android:src="@drawable/quiz4" />

        <TextView
            android:id="@id/text"
            style="@style/TextViewStyle1"
            android:paddingBottom="@dimen/paddingBottom_textviewLg"
            android:text="@string/quiz4" />

        <CheckBox
            android:id="@+id/checkBox1"
            style="@style/CheckboxStyle"
            android:text="@string/quiz4_1" />

        <CheckBox
            android:id="@+id/checkBox2"
            style="@style/CheckboxStyle"
            android:text="@string/quiz4_2" />

        <CheckBox
            android:id="@+id/checkBox3"
            style="@style/CheckboxStyle"
            android:text="@string/quiz4_3" />

        <CheckBox
            android:id="@+id/checkBox4"
            style="@style/CheckboxStyle"
            android:text="@string/quiz4_4" />

        <Button
            android:id="@+id/buttonSubmit4"
            style="@style/ButtonStyle"
            android:layout_marginTop="@dimen/button_layout_marginTop"
            android:text="@string/quiz4_5" />

        <TextView
            android:id="@+id/answer4"
            style="@style/TextViewAnswerStyle" />

        <RelativeLayout style="@style/RelativeLayoutStyle2">

            <TextView
                android:id="@+id/scoreTextView4"
                style="@style/TextViewScoreStyle" />

            <TextView
                android:id="@+id/scoreCount4"
                style="@style/TextViewScoreCountStyle"
                android:layout_toEndOf="@+id/scoreTextView4"
                android:layout_toRightOf="@+id/scoreTextView4" />

            <TextView
                android:id="@+id/questionTextView4"
                style="@style/TextViewQuestionStyle"
                android:layout_toLeftOf="@+id/questionNumber4"
                android:layout_toStartOf="@+id/questionNumber4" />

            <TextView
                android:id="@+id/questionNumber4"
                style="@style/TextViewQuestionNumberStyle"
                android:text="@string/quiz4_count" />

        </RelativeLayout>

        <!-- Toast with final score -->

        <Button
            android:id="@+id/clickButton"
            style="@style/ButtonStyle"
            android:layout_marginTop="@dimen/layout_marginTopLg"
            android:background="@color/black"
            android:text="@string/end"
            android:textColor="@color/white"
            android:textSize="@dimen/font_sizeMedium" />

    </LinearLayout>

</ScrollView>